# abstract-math-playground

./: README.md  syntax-examples.txt
math_playground/: Cargo.toml
math_playground/src/: bin.rs  lib.rs  math.rs  shader.wgsl
math_playground_web/: index.html  package-lock.json  package.json
math_playground_web/src/: main.ts
