[package]
name = "math_playground"
version = "0.1.0"
edition = "2021"

[lib]
name = "math_playground_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "math_playground_bin"
path = "src/bin.rs"

[dependencies]
winit = "0.29"
env_logger = "0.10"
log = "0.4"
wgpu = "0.19"
cfg-if = "1.0"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
# Enables measuring time both natively and with WASM (std::time::Instant only works natively)
instant = { version = "0.1", features = ["wasm-bindgen"] }
nalgebra = "0.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
winit = { version = "0.29" }
wgpu = { version = "0.19", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
